--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Jane Kim</title>
+    <title>Yehoon Suh</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -68,8 +68,8 @@
             <h2>About</h2>
           </div>
           <div class="content-body" style="text-align:center">
-            <p> I was born and raised in Seoul, Korea. I spent most of my school years in a small town called La Canada in California. </p>
-            <p> I am currently working as an English Translator and Interpreter in Corporate Citizenship Office of Samsung Electronics.</p>
+            <p> Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
           </div>
 <style>
 	* {margin:0;padding:0;}
@@ -193,7 +193,7 @@
           <div class="content-body">
             <div class="card">
               <div class="card-header">
-                <h4>Lionix Korea <span class="job-title">Part-time Intern</span></h4>
+                <h4>회사이름 <span class="job-title"></span></h4>
               </div>
               <div class="card-content">
                 <p>I worked in an ICT company as an English translator during my freshman year in college. </p>
